--- a/PI2-LOJA-ROUP/pom.xml
+++ b/PI2-LOJA-ROUP/pom.xml
@@ -4,6 +4,13 @@
     <groupId>br.sp.senac.pi2.loja.roup</groupId>
     <artifactId>PI2-LOJA-ROUP</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
